--- a/index.html
+++ b/index.html
@@ -1,8 +1,21 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="utf-8">
+		<meta name="description" content="Web developer portfolio">
+		<meta name="Carmen Chow">
+
+		<link rel="stylesheet" type="text/css" href="css/reset.css">
+		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 	<body>
-		<h1>Hello world!</h1>
+
+		<div class="content">
+			<h1>Work in progress :)</h1>
+
+			<p>
+				<a href="https://github.com/choww" target="_blank">github</a> | <a href="mailto:c_chow568@yahoo.ca">email</a>
+			</p>
+		</div>
 	</body>
 </html>
