--- a/index.html
+++ b/index.html
@@ -6,16 +6,88 @@
 		<meta name="Carmen Chow">
 
 		<link rel="stylesheet" type="text/css" href="css/reset.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+		<link rel="stylesheet" type="text/css" href="css/slick.css">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 	<body>
 
-		<div class="content">
-			<h1>Work in progress :)</h1>
+		<header>
+			<h1><span>Hello!</span> I'm Carmen and I write <code>code</code>.</h1>
 
 			<p>
-				<a href="https://github.com/choww" target="_blank">github</a> | <a href="mailto:c_chow568@yahoo.ca">email</a>
+				<a href="https://github.com/choww" target="_blank"><i class="fa fa-github"></i> github</a> | <a href="https://twitter.com/chowcar"><i class="fa fa-twitter"></i> twitter</a> | <a href="#contact"><i class="fa fa-pencil-square-o"></i> contact</a>
 			</p>
-		</div>
+
+			<div class="text">
+				Developer from <strong>Vancouver, BC</strong> who loves building responsive and user-friendly web applications.<br>
+				I work most often with <em>Ruby on Rails</em> and <em>Angular.js</em>, but am also familar with <u>jQuery</u> and <u>Python</u>.
+			</div>
+		</header>
+
+		<section>
+			<h2>Things I've Made</h2>
+			<hr>
+
+			<p>
+				<h3><a href="https://github.com/tiluu/go-eggplant" target="_blank">Go Eggplant</a></h3> 
+				<div class="text">
+					[work in progress]<br>
+					A collaborative travel planning application. Front-end work by <a href="http://github.com/tiluu" target="_blank">tiluu</a><br>
+					<div class="stack">Ruby on Rails, Angular.js, jQuery, tested with Rspec</div>
+				</div>
+			</p>
+
+			<p>
+				<h3><a href="http://choww.github.io/hi-mars">Hi Mars</a></h3>
+				<div class="text">
+					[work in progress]<br>
+					Displays and graphs Mars weather data obtained from the <a href="http://marsweather.ingenology.com" target="_blank">{ MAAS }</a> API.<br>
+					<div class="stack">Angular.js, D3.js</div>
+				</div>
+			</p>
+
+			<p>
+				<h3><a href="https://github.com/choww/hpc-areas" target="_blank">Hippocampal Areas Calculator</a></h3>
+				<div class="text">
+					Calculates hippocampal volume and cell density based on data entered in MS Excel<br>  
+					<div class="stack">Python</div>
+				</div>
+			</p>
+		</section>
+
+		<section>
+			<h2>When I'm not coding...</h2>
+			<hr>
+			<div class="img-slider">
+				<div>
+					<div class="image"><img src="img/hike.jpg"></div>
+				</div>
+
+				<div>
+					<div class="image"><img src="img/ski.jpg"></div>
+				</div>
+
+				<div>
+					<div class="image"><img src="img/climb.jpg"></div>
+				</div>
+			</div>
+		</section>
+
+		<footer>
+			<a name="contact"></a>
+			
+			<h2>Contact Me</h2>
+			<hr>
+			<p>
+				<i class="fa fa-envelope"></i> Email: <a href="mailto: c_chow568@yahoo.ca">c_chow568@yahoo.ca</a>
+			</p>
+
+		</footer>
+		<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.3.min.js"</script>
+		<script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+		<script type="text/javascript" src="js/slick.min.js"></script>
+		<script src="js/script.js"></script>
+
 	</body>
 </html>
