Edited media queries (mobile portrait)

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
 			<div class="text">
 				Jr. developer from <strong>Vancouver, BC</strong> who loves building responsive and user-friendly web applications.<br>
 				Currently I work most often with <em>Ruby on Rails</em> and <em>Angular.js</em>, but am also familar with <u>jQuery</u> and <u>Python</u>.
-				Learning: RSpec, D3.js, Node.js
 
 			</div>
 		</header>
@@ -60,20 +59,20 @@
 		</section>
 
 		<section>
+			<h2>What I'm Learning</h2>
+			<hr>
+			<div class="text">
+				D3.js, Node.js, Rspec
+			</div>
+		</section>
+
+		<section>
 			<h2>When I'm not coding...</h2>
 			<hr>
 			<div class="img-slider">
-				<div>
-					<div class="image"><img src="img/hike.jpg"></div>
-				</div>
-
-				<div>
-					<div class="image"><img src="img/ski.jpg"></div>
-				</div>
-
-				<div>
-					<div class="image"><img src="img/climb.jpg"></div>
-				</div>
+				<div><img src="img/hike.jpg"></div>
+				<div><img src="img/ski.jpg"></div>
+				<div><img src="img/climb.jpg"></div>
 			</div>
 		</section>
 
