--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 		<header>
 			<h1><span>Hello!</span> I'm Carmen and I write <code>code</code>.</h1>
 
-			<p>
+			<nav>
 				<a href="https://github.com/choww" target="_blank"><i class="fa fa-github"></i> github</a> | <a href="https://twitter.com/chowcar"><i class="fa fa-twitter"></i> twitter</a> | <a href="#contact"><i class="fa fa-pencil-square-o"></i> contact</a>
-			</p>
+			</nav>
 
 			<div class="text">
 				Jr. developer from <strong>Vancouver, BC</strong> who loves building responsive and user-friendly web applications.<br>
