--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 			</h1>
 
 			<nav>
-				<a href="https://github.com/choww" target="_blank"><i class="fa fa-github"></i> github</a> | <a href="https://twitter.com/chowcar"><i class="fa fa-twitter"></i> twitter</a> | <a href="#contact"><i class="fa fa-pencil-square-o"></i> contact</a>
+				<a href="https://github.com/choww" target="_blank"><i class="fa fa-github"></i> github</a> | <a href="https://twitter.com/chowcar"><i class="fa fa-twitter"></i> twitter</a> | <a href="#contact" id="contact-link"><i class="fa fa-pencil-square-o"></i> contact</a>
 			</nav>
 
 			<div class="text">
-				Jr. developer from <strong>Vancouver, BC</strong> who loves building responsive and user-friendly web applications.<br>
-				Currently I work most often with <em>Ruby on Rails</em> and <em>Angular.js</em>, but am also familar with <u>jQuery</u> and <u>Python</u>.
+				Scientist turned aspiring jr. developer from <strong>Vancouver, BC</strong>. <br>
+				In the <a href="http://lighthouselabs.ca" target="_blank">Lighthouse Labs</a> Web Development Bootcamp - Feb 2016 Cohort!
 
 			</div>
 		</header>
