--- a/index.html
+++ b/index.html
@@ -22,12 +22,15 @@
 			</h1>
 
 			<nav>
-				<a href="https://github.com/choww" target="_blank"><i class="fa fa-github"></i> github</a> | <a href="https://twitter.com/chowcar"><i class="fa fa-twitter"></i> twitter</a> | <a href="#contact" id="contact-link"><i class="fa fa-pencil-square-o"></i> contact</a>
+				<a href="https://github.com/choww" target="_blank"><i class="fa fa-github"></i> github</a> | 
+				<a href="https://twitter.com/chowcar" target="_blank"><i class="fa fa-twitter"></i> twitter</a> | 
+				<a href="https://ca.linkedin.com/in/carmen-chow-2b62ab33" target="_blank"><i class="fa fa-linkedin"></i> linkedin</a> |
+				<a href="#contact" id="contact-link"><i class="fa fa-pencil-square-o"></i> contact</a>
 			</nav>
 
 			<div class="text">
-				Scientist turned aspiring jr. developer from <strong>Vancouver, BC</strong>. <br>
-				In the <a href="http://lighthouselabs.ca" target="_blank">Lighthouse Labs</a> Web Development Bootcamp - Feb 2016 Cohort!
+				Scientist turned aspiring web developer from <strong>Vancouver, BC</strong>. <br>
+				Currently in the <a href="http://lighthouselabs.ca" target="_blank">Lighthouse Labs</a> Web Development Bootcamp - Feb 2016 Cohort!
 
 			</div>
 		</header>
@@ -42,7 +45,7 @@
 				<div class="text">
 					[work in progress]<br>
 					A collaborative travel planning application. Front-end work by <a href="http://github.com/tiluu" target="_blank">tiluu</a><br>
-					<div class="stack">Ruby on Rails, Angular.js, jQuery, tested with Rspec</div>
+					<div class="stack">Ruby on Rails, Angular.js, jQuery, tests done with Rspec</div>
 				</div>
 			</p>
 
@@ -62,14 +65,6 @@
 					<div class="stack">Python</div>
 				</div>
 			</p>
-		</section>
-
-		<section>
-			<h2>What I'm Learning</h2>
-			<hr>
-			<div class="text">
-				D3.js, Node.js, Rspec
-			</div>
 		</section>
 
 		<section>
