Added Rotten Mongoose, updated project descriptions
Edited description

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 			<nav>
 				<a href="https://github.com/choww" target="_blank"><i class="fa fa-github"></i> github</a> | 
 				<a href="https://twitter.com/chowcar" target="_blank"><i class="fa fa-twitter"></i> twitter</a> | 
-				<a href="https://ca.linkedin.com/in/carmen-chow-2b62ab33" target="_blank"><i class="fa fa-linkedin"></i> linkedin</a> |
+				<a href="https://ca.linkedin.com/in/carmen-choww" target="_blank"><i class="fa fa-linkedin"></i> linkedin</a> |
 				<a href="#contact" id="contact-link"><i class="fa fa-pencil-square-o"></i> contact</a>
 			</nav>
 
 			<div class="text">
-				Scientist turned aspiring web developer from <strong>Vancouver, BC</strong>. <br>
+				Scientist turned Junior web developer from Vancouver, BC. Loves elegant code logic and intuitive user interfaces. <br>
 				Currently in the <a href="http://lighthouselabs.ca" target="_blank">Lighthouse Labs</a> Web Development Bootcamp - Feb 2016 Cohort!
 
 			</div>
@@ -40,30 +40,46 @@
 
 			<hr>
 
-			<p>
+      <div class="text">
+        <h3><a href="https://github.com/choww/rotten-mongoose" target="_blank">Rotten Mongoose</a></h3>
+        <p>
+          [work in progress--in process of deploying to heroku]<br>
+          A Rotten Tomatoes clone. Movie review site that lets users see and submit movies as well as reviews for those movies.<br>
+          Movie lists and reviews are dynamically updated via AJAX.
+        </p>
+        <div class="stack">Ruby on Rails, jQuery, Bootstrap/LESS</div>
+      </div>      
+
+			<div class="text">
 				<h3><a href="https://github.com/tiluu/go-eggplant" target="_blank">Go Eggplant</a></h3> 
-				<div class="text">
-					[work in progress]<br>
-					A collaborative travel planning application. Front-end work by <a href="http://github.com/tiluu" target="_blank">tiluu</a><br>
-					<div class="stack">Ruby on Rails, Angular.js, jQuery, tests done with Rspec</div>
-				</div>
-			</p>
+				<p>
+          [work in progress]<br>
+				  A web application for planning trip activities with friends.<br>
+           Includes an itinerary calendar and suggestion box built using Angular.js. Users can search for ideas via the Yelp and Foursquare APIs and add activities to the suggestion box.<br>
+          Front-end work by <a href="http://github.com/tiluu" target="_blank">tiluu</a>
+        </p>
 
-			<p>
-				<h3><a href="http://choww.github.io/hi-mars">Hi Mars</a></h3>
-				<div class="text">
-					Displays and graphs Mars weather data obtained from the <a href="http://marsweather.ingenology.com" target="_blank">{MAAS}</a> API.<br>
-					<div class="stack">Angular.js, D3.js</div>
-				</div>
-			</p>
+				<div class="stack">Ruby on Rails, Angular.js, Rspec (tests)</div>
+		  </div>
 
-			<p>
-				<h3><a href="https://github.com/choww/hpc-areas" target="_blank">Hippocampal Areas Calculator</a></h3>
-				<div class="text">
-					Calculates hippocampal volume and cell density based on data entered in MS Excel<br>  
-					<div class="stack">Python</div>
-				</div>
-			</p>
+	  	<div class="text">
+	  		<h3><a href="http://choww.github.io/hi-mars">Hi Mars</a></h3>
+        <p>
+	  		  A Mars weather report web application.<br>
+          Data were obtained from the <a href="http://marsweather.ingenology.com" target="_blank">{MAAS}</a> API and displayed using Angular.js. The line chart that display temperature changes over time was built using D3.js.
+        </p>
+
+	  	  <div class="stack">Angular.js, D3.js, CSS/SASS</div>
+	  	</div>
+
+	  	<div class="text">
+	  		<h3><a href="https://github.com/choww/hpc-areas" target="_blank">Hippocampal Areas Calculator</a></h3>
+	  		<p>
+          A desktop application that calculates hippocampal volume and cell density based on data (cell counts and region areas) entered in Excel.<br>
+          Designed to automate some of the workflow at my previous workplace. Reading and writing to Excel was faciliated with the xlutils module, and the GUI was built using wxPython.
+        </p>
+	  		<div class="stack">Python</div>
+	  	</div>
 		</section>
 
 		<section>
@@ -82,7 +98,7 @@
 			<h2>Contact Me</h2>
 			<hr>
 			<p>
-				<i class="fa fa-envelope"></i> Email: <a href="mailto: c_chow568@yahoo.ca">c_chow568@yahoo.ca</a>
+				<i class="fa fa-envelope"></i> Email: <a href="mailto: carmenn.choww@gmail.com">carmenn.choww@gmail.com</a>
 			</p>
 
 		</footer>
