Fixed width of text divs

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="description" content="Web developer portfolio">
 		<meta name="Carmen Chow">
+    <meta name="viewport" content="width=device-width">
 
 		<link rel="stylesheet" type="text/css" href="css/reset.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
@@ -24,13 +25,13 @@
 			<nav>
 				<a href="https://github.com/choww" target="_blank"><i class="fa fa-github"></i> github</a> | 
 				<a href="https://twitter.com/chowcar" target="_blank"><i class="fa fa-twitter"></i> twitter</a> | 
-				<a href="https://ca.linkedin.com/in/carmen-choww" target="_blank"><i class="fa fa-linkedin"></i> linkedin</a> |
+				<a href="https://ca.linkedin.com/in/carmenchoww" target="_blank"><i class="fa fa-linkedin"></i> linkedin</a> |
 				<a href="#contact" id="contact-link"><i class="fa fa-pencil-square-o"></i> contact</a>
 			</nav>
 
 			<div class="text">
-				Scientist turned Junior web developer from Vancouver, BC. Loves elegant code logic and intuitive user interfaces. <br>
-				Currently in the <a href="http://lighthouselabs.ca" target="_blank">Lighthouse Labs</a> Web Development Bootcamp - Feb 2016 Cohort!
+				Junior full-stack web developer from Vancouver, BC who loves elegant code logic and intuitive user interfaces. My current skills include Ruby on Rails, jQuery, Angular.js, Python, and CSS (SASS/LESS), but the list is always growing!<br>
+				Currently part of the <a href="http://lighthouselabs.ca" target="_blank">Lighthouse Labs</a> Web Development Bootcamp - Feb 2016 Cohort.
 
 			</div>
 		</header>
@@ -43,11 +44,11 @@
       <div class="text">
         <h3><a href="https://github.com/choww/rotten-mongoose" target="_blank">Rotten Mongoose</a></h3>
         <p>
-          [work in progress--in process of deploying to heroku]<br>
+          [work in progress--semi-live. Follow the title link for details]<br>
           A Rotten Tomatoes clone. Movie review site that lets users see and submit movies as well as reviews for those movies.<br>
           Movie lists and reviews are dynamically updated via AJAX.
         </p>
-        <div class="stack">Ruby on Rails, jQuery, Bootstrap/LESS</div>
+        <div class="stack">Ruby on Rails, jQuery, Bootstrap/LESS, PostgreSQL</div>
       </div>      
 
 			<div class="text">
@@ -59,13 +60,13 @@
           Front-end work by <a href="http://github.com/tiluu" target="_blank">tiluu</a>
         </p>
 
-				<div class="stack">Ruby on Rails, Angular.js, Rspec (tests)</div>
+				<div class="stack">Ruby on Rails, Angular.js, Rspec (tests), PostgreSQL</div>
 		  </div>
 
 	  	<div class="text">
-	  		<h3><a href="http://choww.github.io/hi-mars">Hi Mars</a></h3>
+	  		<h3><a href="https://github.com/choww/hi-mars">Hi Mars</a></h3>
         <p>
-	  		  A Mars weather report web application.<br>
+	  		  A Mars weather report web application. Version 1 live <a href="http://choww.github.io/hi-mars" target="_blank">here</a><br>
           Data were obtained from the <a href="http://marsweather.ingenology.com" target="_blank">{MAAS}</a> API and displayed using Angular.js. The line chart that display temperature changes over time was built using D3.js.
         </p>
 
