--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
 			</nav>
 
 			<div class="text">
-				Junior full-stack web developer from Vancouver, BC who loves elegant code logic and intuitive user interfaces. My current skills include Ruby on Rails, jQuery, Angular.js, Python, and CSS (SASS/LESS), but the list is always growing!<br>
-				Currently part of the <a href="http://lighthouselabs.ca" target="_blank">Lighthouse Labs</a> Web Development Bootcamp - Feb 2016 Cohort.
-
+				Junior full-stack web developer from Vancouver, BC who loves elegant code logic and intuitive user interfaces. My current stack is <strong class="curr-stack">Ruby on Rails</strong>, <strong class="curr-stack">Javascript/jQuery</strong> and <strong class="curr-stack">PostgreSQL</strong>, but I also have experience with Angular.js, Python, and Redis.<br/>
 			</div>
 		</header>
 
@@ -42,9 +40,18 @@
 			<hr>
 
       <div class="text">
+        <h3><a href="https://github.com/jpychan/music-festival-app" target="_blank">MusicXplore</a></h3>
+        <p>
+          A music festival finder and trip planning application built in collaboaration with 3 other students from Lighthouse Labs. <br>
+          I was in charge of building the dyanmic search form, scraping <a href="https://www.musicfestivalwizard.com" target="_blank">Music Festival Wizard</a> for all the festival & artist data and storing it in our database, calculating costs of driving to each festival by converting a user's location to latitude and longitude, and using Redis to allow users to "favorite" music festivals and compare travel details of all favorited festivals without having to sign up.
+        </p>
+        <div class="stack">Ruby on Rails, jQuery, PostgreSQL, Redis</div>
+      </div>
+
+      <div class="text">
         <h3><a href="https://github.com/choww/rotten-mongoose" target="_blank">Rotten Mongoose</a></h3>
         <p>
-          [work in progress--semi-live. Follow the title link for details]<br>
+          [semi-live. Follow the title link for details]<br>
           A Rotten Tomatoes clone. Movie review site that lets users see and submit movies as well as reviews for those movies.<br>
           Movie lists and reviews are dynamically updated via AJAX.
         </p>
