--- a/index.html
+++ b/index.html
@@ -42,17 +42,17 @@
         <h3><a href="https://github.com/choww/timewise" target="_blank">Timewise</a></h3>
         <p><span class="status incomplete">In progress</span></p>
         <p>
-          A project <strong>time tracker and task manager</strong> for developers. Complete with analytics to show breakdown of time spent working on certain languages/frameworks. 
+          I love productivity apps, so I started working on a <strong>time tracker and task manager</strong> for developers. Complete with analytics to show breakdown of time spent working on certain languages/frameworks. 
         </p>
         <div class="stack">Rails 5, Angular.js, PostgreSQL</div>
       </article>
 
       <article>
         <h3><a href="https://github.com/choww/rotten-mongoose" target="_blank">Rotten Mongoose</a></h3>
-        <p><span class="status complete">Complete</span></p>
+        <p><span class="status complete">Complete</span> - version 1</p>
         <p>
-          A Rotten Tomatoes clone. <strong>Movie review</strong> site that lets users see and submit movies as well as reviews for those movies.<br>
-          Movie lists and reviews are dynamically updated via AJAX.
+          A <strong>Rotten Tomatoes clone</strong> I during coding bootcamp. A movie review site that lets users see and submit movies as well as reviews for those movies.<br>
+          Movie lists and reviews are dynamically updated via polling with AJAX.
         </p>
         <div class="stack">Rails 4, jQuery, Bootstrap/LESS, PostgreSQL</div>
       </article>
@@ -63,7 +63,7 @@
           <span class="status complete">Complete</span> - <a href="http://choww.github.io/hi-mars" target="_blank">version 1</a>
         </p>
         <p>
-	  		  A <strong>Mars weather report</strong> web application.<br>
+	  		  I wanted to learn Angular and I'm fascinated by astronomy, so I combined the two interests into a <strong>Mars weather report</strong> app!<br>
           Data were obtained from the <a href="http://marsweather.ingenology.com" target="_blank">{MAAS}</a> API and displayed using Angular.js. The line chart that display temperature changes over time was built using D3.js.
         </p>
 
@@ -72,10 +72,10 @@
 
       <article>
 	  		<h3><a href="https://github.com/choww/hpc-areas" target="_blank">Hippocampal Areas Calculator</a></h3>
-        <p><span class="status complete">Complete</span></p>
+        <p><span class="status complete">Complete</span> - version 1</p>
 	  		<p>
-          A desktop application that <strong>calculates hippocampal volume and cell density</strong> based on data (cell counts and region areas) entered in Excel.<br>
-          Designed to automate some of the workflow at my previous workplace. Reading and writing to Excel was faciliated with the xlutils module, and the GUI was built using wxPython.
+          In my previous life as a scientist, I spent a lot of time prepping data for analysis, which is tedious. I decided to automate a part of this process with a desktop application that <strong>calculates hippocampal volume and cell density</strong>.<br/>
+          Reading and writing to Excel was faciliated with the xlutils module, and the GUI was built using wxPython. 
         </p>
 	  		<div class="stack">Python</div>
       </article>
