Alignment, font size, and colour adjustments

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			</nav>
 
 			<div class="description">
-				Junior web developer from Vancouver, BC. Enthusiatic about clean, readable code and exploring new technologies! My current stack is <strong class="curr-stack">Ruby on Rails</strong>, <strong class="curr-stack">Javascript/jQuery</strong> and <strong class="curr-stack">PostgreSQL</strong>, but I also have experience with <span class="other-skills">Angular.js</span>, <span class="other-skills">Python</span>, and <span class="other-skills">Redis</span>.
+				Full-stack web developer from Vancouver, BC. Enthusiatic about clean, readable code and exploring new technologies! My current stack is <span class="curr-stack">Ruby on Rails</span>, <span class="curr-stack">Javascript/jQuery</span> and <span class="curr-stack">PostgreSQL</span>, but I also have experience with <span class="underline">Angular.js</span>, <span class="underline">Python</span>, and <span class="underline">Redis</span>.
 			</div>
 		</header>
 
@@ -42,7 +42,7 @@
         <h3><a href="https://github.com/choww/timewise" target="_blank">Timewise</a></h3>
         <p><span class="status incomplete">In progress</span></p>
         <p>
-          I love productivity apps, so I started working on a <strong>time tracker and task manager</strong> for developers. Complete with analytics to show breakdown of time spent working on certain languages/frameworks. 
+          I love <strong>productivity apps</strong>, so I started working on a <span class="underline">time tracker & task manager</span> for developers. Complete with analytics to show breakdown of time spent working on certain languages/frameworks. 
         </p>
         <div class="stack">Rails 5, Angular.js, PostgreSQL</div>
       </article>
@@ -51,7 +51,7 @@
         <h3><a href="https://github.com/choww/rotten-mongoose" target="_blank">Rotten Mongoose</a></h3>
         <p><span class="status complete">Complete</span> - version 1</p>
         <p>
-          A <strong>Rotten Tomatoes clone</strong> I during coding bootcamp. A movie review site that lets users see and submit movies as well as reviews for those movies.<br>
+          A <span class="underline">Rotten Tomatoes clone</span> I during coding bootcamp. A movie review site that lets users see and submit movies as well as reviews for those movies.<br>
           Movie lists and reviews are dynamically updated via polling with AJAX.
         </p>
         <div class="stack">Rails 4, jQuery, Bootstrap/LESS, PostgreSQL</div>
@@ -63,7 +63,7 @@
           <span class="status complete">Complete</span> - <a href="http://choww.github.io/hi-mars" target="_blank">version 1</a>
         </p>
         <p>
-	  		  I wanted to learn Angular and I'm fascinated by astronomy, so I combined the two interests into a <strong>Mars weather report</strong> app!<br>
+	  		  I wanted to learn <strong>Angular</strong> and I'm fascinated by <strong>astronomy</strong>, so I combined the two interests into a <span class="underline">Mars weather report</span> app!<br>
           Data were obtained from the <a href="http://marsweather.ingenology.com" target="_blank">{MAAS}</a> API and displayed using Angular.js. The line chart that display temperature changes over time was built using D3.js.
         </p>
 
@@ -71,10 +71,10 @@
       </article>
 
       <article>
-	  		<h3><a href="https://github.com/choww/hpc-areas" target="_blank">Hippocampal Areas Calculator</a></h3>
+	  		<h3><a href="https://github.com/choww/hpc-areas" target="_blank">HPC Calculator</a></h3>
         <p><span class="status complete">Complete</span> - version 1</p>
 	  		<p>
-          In my previous life as a scientist, I spent a lot of time prepping data for analysis, which is tedious. I decided to automate a part of this process with a desktop application that <strong>calculates hippocampal volume and cell density</strong>.<br/>
+          In my previous life as a <strong>scientist</strong>, I spent a lot of time prepping data for analysis, which is tedious. I decided to automate a part of this process with a desktop application that <span class="underline">calculates hippocampal volume & cell density</span>.<br/>
           Reading and writing to Excel was faciliated with the xlutils module, and the GUI was built using wxPython. 
         </p>
 	  		<div class="stack">Python</div>
