Mobile font size & position adjustments

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <h4>Things I build in my spare time! More on my <a href="https://github.com/choww" target="_blank">github</a></h4>
 			<hr>
       <article>
-        <h3><a href="https://github.com/choww/timewise" target="_blank">Timewise</a></h3>
+        <h3><a href="https://github.com/choww/journey" target="_blank">Journey</a></h3>
         <p><span class="status incomplete">In progress</span></p>
         <p>
           I love <strong>productivity apps</strong>, so I started working on a <span class="underline">time tracker & task manager</span> for developers. Complete with analytics to show breakdown of time spent working on certain languages/frameworks. 
@@ -49,7 +49,7 @@
 
       <article>
         <h3><a href="https://github.com/choww/rotten-mongoose" target="_blank">Rotten Mongoose</a></h3>
-        <p><span class="status complete">Complete</span> - version 1</p>
+        <p><span class="status complete">version 1</span></p>
         <p>
           A <span class="underline">Rotten Tomatoes clone</span> I during coding bootcamp. A movie review site that lets users see and submit movies as well as reviews for those movies.<br>
           Movie lists and reviews are dynamically updated via polling with AJAX.
@@ -60,7 +60,7 @@
       <article>
 	  		<h3><a href="https://github.com/choww/hi-mars">Hi Mars</a></h3>
         <p>
-          <span class="status complete">Complete</span> - <a href="http://choww.github.io/hi-mars" target="_blank">version 1</a>
+          <span class="status complete">version 1</span> - <a href="http://choww.github.io/hi-mars" target="_blank">live</a>
         </p>
         <p>
 	  		  I wanted to learn <strong>Angular</strong> and I'm fascinated by <strong>astronomy</strong>, so I combined the two interests into a <span class="underline">Mars weather report</span> app!<br>
@@ -72,7 +72,7 @@
 
       <article>
 	  		<h3><a href="https://github.com/choww/hpc-areas" target="_blank">HPC Calculator</a></h3>
-        <p><span class="status complete">Complete</span> - version 1</p>
+        <p><span class="status complete">version 1</span></p>
 	  		<p>
           In my previous life as a <strong>scientist</strong>, I spent a lot of time prepping data for analysis, which is tedious. I decided to automate a part of this process with a desktop application that <span class="underline">calculates hippocampal volume & cell density</span>.<br/>
           Reading and writing to Excel was faciliated with the xlutils module, and the GUI was built using wxPython. 
