--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			</nav>
 
 			<div class="description">
-				Full-stack web developer from Vancouver, BC. Enthusiatic about clean, readable code and exploring new technologies! My current stack is <span class="curr-stack">Ruby on Rails</span>, <span class="curr-stack">Javascript/jQuery</span> and <span class="curr-stack">PostgreSQL</span>, but I also have experience with <span class="underline">Angular.js</span>, <span class="underline">Python</span>, and <span class="underline">Redis</span>.
+				Full-stack developer from Vancouver, BC. Enthusiatic about clean, readable code and exploring new technologies! My current stack is <span class="curr-stack">Ruby on Rails</span>, <span class="curr-stack">Javascript/jQuery</span> and <span class="curr-stack">PostgreSQL</span>, but I also have experience with <span class="underline">Angular.js</span>, <span class="underline">React.js</span>, <span class="underline">Python</span>, <span class="underline">Django</span>, and <span class="underline">Redis</span>.
 			</div>
 		</header>
 
